Pagamentos pendentes no txt
Agora pagamentos pendentes aparecem no txt
Estrutura de teste chama o menu também
Arrumei implementação obsoleta de Locale.of